[tool.poetry]
name = "hashes_from_git"
version = "1.0"
description = "Скрипт для нахождения хэшей файлов в Git репозитории"
authors = ["outside.fedkov@gmail.com"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "3.9.5"
aiosignal = "1.3.1"
astor = "0.8.1"
attrs = "23.2.0"
autorepr = "0.3.0"
bandit = "1.7.9"
build = "1.2.1"
cachecontrol = "0.14.0"
cattrs = "23.2.3"
certifi = "2024.7.4"
charset-normalizer = "3.3.2"
cleo = "2.1.0"
click = "8.1.7"
colorama = "0.4.6"
configupdater = "3.2"
coverage = "7.5.4"
crashtest = "0.4.1"
darglint = "1.8.1"
dictdiffer = "0.9.0"
distlib = "0.3.8"
docutils = "0.21.2"
dpath = "2.2.0"
dulwich = "0.21.7"
eradicate = "2.3.0"
fastjsonschema = "2.20.0"
filelock = "3.15.4"
flake8 = "7.1.0"
flake8-bandit = "4.1.1"
flake8-broken-line = "1.0.0"
flake8-commas = "2.1.0"
flake8-comprehensions = "3.15.0"
flake8-debugger = "4.1.2"
flake8-docstrings = "1.7.0"
flake8-eradicate = "1.5.0"
flake8-isort = "6.1.1"
flake8-quotes = "3.4.0"
flake8-rst-docstrings = "0.3.0"
flake8-string-format = "0.3.0"
flatten-dict = "0.4.2"
frozenlist = "1.4.1"
furl = "2.1.3"
gitdb = "4.0.11"
gitignore-parser = "0.1.11"
gitpython = "3.1.43"
identify = "2.5.36"
idna = "3.7"
importlib-metadata = "8.0.0"
iniconfig = "2.0.0"
installer = "0.7.0"
isort = "5.13.2"
jaraco-classes = "3.4.0"
jmespath = "1.0.1"
keyring = "24.3.1"
loguru = "0.7.2"
markdown-it-py = "3.0.0"
marshmallow = "3.21.3"
marshmallow-polyfield = "5.11"
mccabe = "0.7.0"
mdurl = "0.1.2"
more-itertools = "10.3.0"
msgpack = "1.0.8"
multidict = "6.0.5"
nitpick = "0.35.0"
orderedmultidict = "1.0.1"
packaging = "24.1"
pbr = "6.0.0"
pep8-naming = "0.13.3"
pexpect = "4.9.0"
pkginfo = "1.11.1"
platformdirs = "4.2.2"
pluggy = "1.5.0"
poetry = "1.8.3"
poetry-core = "1.9.0"
poetry-plugin-export = "1.8.0"
ptyprocess = "0.7.0"
pycodestyle = "2.12.0"
pydocstyle = "6.3.0"
pyflakes = "3.2.0"
pygments = "2.18.0"
pyproject-hooks = "1.1.0"
pytest-asyncio = "0.23.7"
python-slugify = "8.0.4"
pywin32-ctypes = "0.2.2"
pyyaml = "6.0.1"
rapidfuzz = "3.9.4"
requests = "2.32.3"
requests-cache = "1.2.1"
requests-toolbelt = "1.0.0"
restructuredtext-lint = "1.4.0"
rich = "13.7.1"
ruamel-yaml = "0.18.6"
ruamel-yaml-clib = "0.2.8"
shellingham = "1.5.4"
six = "1.16.0"
smmap = "5.0.1"
snowballstemmer = "2.2.0"
sortedcontainers = "2.4.0"
stevedore = "5.2.0"
strenum = "0.4.15"
text-unidecode = "1.3"
toml = "0.10.2"
tomlkit = "0.12.5"
trove-classifiers = "2024.7.2"
typing-extensions = "4.12.2"
url-normalize = "1.4.3"
urllib3 = "2.2.2"
virtualenv = "20.26.3"
win32-setctime = "1.1.0"
yarl = "1.9.4"
zipp = "3.19.2"

[tool.pytest.ini_options]
testpaths = [ "tests",]
python_files = "test*.py"
addopts = "-rsxX -l --tb=short --strict-markers --doctest-modules"
xfail_strict = "true"

[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.18.0"
flake8-pytest-style = "^1.7.2"
flake8-annotations = "^3.0.1"
flake8-logging-format = "^0.9.0"
flake8-spellcheck = "^0.28.0"
isort = "^5.7.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-sugar = "^0.9.7"
Faker = "^20.1.0"
pytest-snapshot = "^0.9.0"

[tool.poetry.group.test.dependencies.pytest-xdist]
extras = [ "psutil",]
version = "^3.5.0"
